--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,4 +1,46 @@
 body {
-  margin: 0;
-  padding: 0;
+  background-image: url("./../images/background.jpg");
+  background-size: 85%;
+  background-repeat: no-repeat;
+
+  background-color: black;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+}
+
+.section-1 {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+h1 {
+  color: white;
+  text-align: left;
+  width: 100%;
+  font-size: 80px;
+  /* border: white 2px solid; */
+  margin-left: 10%;
+  margin-top: 10%;
+}
+
+p {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  color: white;
+  font-size: 20px;
+  margin-left: 10%;
+  text-align: left;
+  margin-top: -30px;
+  width: 150%;
+}
+
+span {
+  color: rgb(175, 0, 0);
+}
+
+#canvas {
+  border: red 1px solid;
+  width: 500px;
+  height: 700px;
+  margin-left: 900px;
+  margin-top: -18%;
 }
