--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -2,9 +2,9 @@ body {
   background-image: url("./../images/background.jpg");
   background-size: 82%;
   background-repeat: no-repeat;
-
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
   background-color: black;
-  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
 }
 
 .section-1 {
@@ -16,7 +16,7 @@ h1 {
   color: white;
   text-align: left;
   width: 100%;
-  font-size: 80px;
+  font-size: 78px;
   /* border: white 2px solid; */
   margin-left: 10%;
   margin-top: 10%;
@@ -47,22 +47,48 @@ span {
   border-radius: 8px;
   margin-left: 900px;
   margin-top: -18%;
-  /* background-color: lightsalmon; */
+  background-image: url("./../images/mouse.png");
+  background-blend-mode: screen;
+  background-repeat: repeat-y;
+  transition: background-position 4s linear;
+  background-position: -68px;
+  background-size: 68px;
+}
+
+#canvas:hover {
+  background-position-x: 500px;
 }
 
 #start-button {
-  width: 200px;
-  height: 40px;
-  margin-left: 1050px;
+  width: 150px;
+  height: 30px;
+  margin-left: 1060px;
   margin-top: 4px;
   font-size: 22px;
   background-color: darkred;
-  border-radius: 8px;
+  border-radius: 6px;
   color: lightgrey;
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   transition: background-color 0.25s;
 }
 
 #start-button:hover {
-  background-color: rgb(167, 2, 2);
+  background-color: rgb(202, 0, 0);
+}
+
+#restart-button {
+  width: 150px;
+  height: 30px;
+  margin-left: 1060px;
+  font-size: 20px;
+  background-color: darkred;
+  border-radius: 6px;
+  color: lightgrey;
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  transition: background-color 0.25s;
+  visibility: hidden;
+}
+
+#restart-button:hover {
+  background-color: rgb(202, 0, 0);
 }
