--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -24,7 +24,7 @@ h1 {
 }
 
 h1:hover {
-  color: darkred;
+  color: rgb(126, 0, 0);
 }
 
 p {
@@ -43,26 +43,26 @@ span {
 }
 
 #canvas {
-  /* border: darkred 1px solid; */
   border-radius: 8px;
   margin-left: 900px;
   margin-top: -18%;
   background-image: url("./../images/mouse.png");
-  background-blend-mode: screen;
-  background-repeat: repeat-x;
-  transition: background-position 4s ease-in-out;
+  background-repeat: repeat;
+  transition: all 6s ease-out;
   background-position: bottom;
-  background-size: 72px;
+  background-size: 144px;
 }
 
 #canvas:hover {
-  background-position-y: 0px;
+  background-position-y: 100px;
+  background-repeat: repeat;
+  background-size: 448px;
 }
 
 #start-button {
   width: 150px;
   height: 30px;
-  margin-left: 1060px;
+  margin-left: 1080px;
   margin-top: 4px;
   font-size: 22px;
   background-color: darkred;
@@ -79,7 +79,7 @@ span {
 #restart-button {
   width: 150px;
   height: 30px;
-  margin-left: 1060px;
+  margin-left: 1080px;
   font-size: 20px;
   background-color: darkred;
   border-radius: 6px;
