--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -5,6 +5,7 @@ body {
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
   background-color: black;
+  color: white;
 }
 
 #scoreDiv {
@@ -13,6 +14,7 @@ body {
   margin-top: 5px;
   margin-left: 1105px;
   height: 2px;
+  font-family: monospace;
 }
 
 .section-1 {
@@ -102,4 +104,20 @@ span {
   margin-top: 3px;
   width: 25px;
   height: 25px;
+}
+
+#gameOver-image {
+  margin-left: 1115px;
+  margin-top: -5%;
+  width: 70px;
+  height: 80px;
+  display: none;
+}
+
+#game-over-text {
+  font-family: monospace;
+  margin-left: 1030px;
+  margin-top: -10%;
+  font-size: 30px;
+  display: none;
 }
