--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -12,7 +12,7 @@ body {
   font-size: 25px;
   color: white;
   margin-top: 5px;
-  margin-left: 1105px;
+  margin-left: 78%;
   height: 2px;
   font-family: monospace;
 }
@@ -87,7 +87,7 @@ span {
 #canvas {
   border-radius: 8px;
   margin-left: 900px;
-  margin-top: -37%;
+  margin-top: 6%;
   background-image: url("./../images/mouse.png");
   background-repeat: repeat;
   transition: all 4s ease-out;
@@ -103,7 +103,7 @@ span {
 #start-button {
   width: 150px;
   height: 30px;
-  margin-left: 1080px;
+  margin-left: 77%;
   margin-top: 4px;
   font-size: 22px;
   background-color: rgb(126, 0, 0);
@@ -121,7 +121,7 @@ span {
 #restart-button {
   width: 150px;
   height: 30px;
-  margin-left: 1080px;
+  margin-left: 77%;
   font-size: 20px;
   background-color: rgb(126, 0, 0);
   border-radius: 15px;
@@ -143,7 +143,7 @@ span {
 }
 
 #gameOver-image {
-  margin-left: 1045px;
+  margin-left: 75%;
   margin-top: -10%;
   width: 250px;
   height: 255px;
